--- a/wallet-frontend/src/app/app.component.html
+++ b/wallet-frontend/src/app/app.component.html
@@ -1,42 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-  </head>
-  <body>
-    <div class="container login-container">
-      <div class="row">
-        <div class="col-md-6 login-form-1">
-          <h3>Login for Form 1</h3>
-          <form>
-            <div class="form-group">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Your Email *"
-                value=""
-              />
-            </div>
-            <div class="form-group">
-              <input
-                type="password"
-                class="form-control"
-                placeholder="Your Password *"
-                value=""
-              />
-            </div>
-            <div class="form-group">
-              <input type="submit" class="btnSubmit" value="Login" />
-            </div>
-            <div class="form-group">
-              <a href="#" class="ForgetPwd">Forget Password?</a>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
+<!-- <router-outlet></router-outlet> -->
+<!-- <app-login></app-login> -->
+<app-wallet></app-wallet>
