--- a/wallet-frontend/src/app/components/login/login.component.html
+++ b/wallet-frontend/src/app/components/login/login.component.html
@@ -1,20 +1,17 @@
 <!-- <p>login works!</p> -->
-<form #loginData="ngForm" (ngSubmit)="login(loginData.value)">
-  <label for="user-email">Email</label>
-  <input
-    type="text"
-    id="user-email"
-    placeholder="Enter Email"
-    name="email"
-    ngModel
-  /><br />
-  <label for="user-pass">Password</label>
-  <input
-    type="password"
-    id="user-pass"
-    placeholder="Enter Password"
-    name="password"
-    ngModel
-  /><br />
-  <input type="submit" value="Login" />
-</form>
+<nav class="navbar">
+  <h1>Online-Wallet</h1>
+  <!-- <ul>
+    <li class="btn btn-logout">Logout</li>
+  </ul> -->
+</nav>
+<main>
+  <section class="login">
+    <form #loginData="ngForm" (ngSubmit)="login(loginData.value)">
+      <h2 class="large-text">Sign In</h2>
+      <input type="text" id="user-email" placeholder="Enter Email" name="email" ngModel> <br>
+      <input type="password" id="user-pass" placeholder="Enter Password" name="password" ngModel> <br>
+      <input type="submit" value="Login" class="btn btn-submit">
+    </form>
+  </section>
+</main>
