Added functionality of updating of current balance in angular. TODO adding functionality of sending account data by id

--- a/wallet-frontend/src/app/components/wallet/wallet.component.html
+++ b/wallet-frontend/src/app/components/wallet/wallet.component.html
@@ -1,9 +1,6 @@
-<!-- <p>wallet works!</p> -->
+<!-- Navbar -->
 <nav class="navbar">
   <h1>Online-Wallet</h1>
-  <!-- <ul>
-    <li class="btn btn-logout">Logout</li>
-  </ul> -->
 </nav>
 <!-- Current Balance -->
 <main>
@@ -41,6 +38,7 @@
         <input type="submit" class="btn btn-debit" value="DEBIT" />
       </form>
     </article>
+
     <!-- Credit option -->
     <article class="credit-box">
       <h2 class="credit-head">CREDIT FUNDS</h2>
