Added a condition in AccountController that prevents creation of users with same email address

--- a/wallet-frontend/src/app/components/wallet/wallet.component.html
+++ b/wallet-frontend/src/app/components/wallet/wallet.component.html
@@ -7,7 +7,7 @@
   <section class="main-wallet">
     <h2 class="large-heading">Current Balance</h2>
     <h3 class="amnt">₹ {{ user.balance }}</h3>
-    <a routerLink="/transact" class="show-all" target="_blank"
+    <a routerLink="/transact" class="show-all"
       >Show all transactions &#10132;</a
     >
   </section>
