--- a/wallet-frontend/src/app/components/transactions/transactions.component.css
+++ b/wallet-frontend/src/app/components/transactions/transactions.component.css
@@ -9,17 +9,83 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-table,
-th,
-td {
-    border: 2px solid aqua;
-    width: 80%;
+.navbar {
+    justify-content: space-between;
+    color: aliceblue;
+    background-color: #333;
+    padding: 1.2rem;
+    margin: 0 auto 1rem;
+    font-size: 1.5rem;
+}
+
+.navbar h2 {
+    display: block;
+    padding: 1rem;
+}
+
+.main-wallet {
+    text-align: center;
+    margin: 2rem auto;
+    padding: 0 0 1rem 0;
+    outline: 5px solid aqua;
+    width: 90%;
+    border-radius: 10px;
+    background-color: violet;
+    min-height: 50vh;
+}
+
+.large-heading {
+    font-size: 2rem;
+    background-color: aqua;
+    border-bottom: 5px solid orange;
+    border-radius: 10px 10px 0 0;
+}
+
+.amnt {
+    font-size: 4rem;
+    color: chartreuse;
+    margin: 2rem 0;
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.2rem;
+    color: white;
+    padding: 1rem;
+    outline: 3px solid orange;
+    border-radius: 10px;
+    background-color: red;
+}
+
+h2,
+h3 {
+    margin-bottom: 1rem;
+    padding: 1rem;
+}
+
+table {
+    outline: 5px solid aqua;
+    border: 2px solid #333;
+    font-size: 1.2rem;
+    width: 90%;
     border-collapse: collapse;
 }
 
-th, td {
+th {
     padding: 1rem;
+    font-size: 1.2rem;
+    border: 2px solid #333;
+    border-bottom: 5px solid orange;
+    border-collapse: collapse;
+}
+
+td {
+    font-weight: 400;
+    border: 2px solid #333;
+    padding: 1rem;
+    width: fit-content;
     text-align: left;
+    overflow: hidden;
 }
 
 .container {
