--- a/wallet-frontend/src/app/components/wallet/wallet.component.css
+++ b/wallet-frontend/src/app/components/wallet/wallet.component.css
@@ -35,7 +35,7 @@ h2, h3 {
     outline: 5px solid aqua;
     width: 90%;
     border-radius: 10px;
-    background-color: antiquewhite;
+    background-color: violet;
     min-height: 50vh;
 }
 
